Fix sale badge alignment on smaller screen (https://github.com/woocommerce/woocommerce-blocks/pull/5061)
fix sale badge alignment on smaller screen

--- a/plugins/woocommerce-blocks/assets/js/base/components/product-list/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/product-list/style.scss
@@ -134,9 +134,6 @@
 				}
 				.wc-block-grid__product:nth-child(even) {
 					padding-left: $gap*0.5;
-					.wc-block-grid__product-onsale {
-						left: $gap*0.5;
-					}
 				}
 			}
 		}
